前面修改出的bug： ZEntityHandlerScanner.scan 改为String... 参数后，扫描出的ZEntityHandler重复了，导致后续的判断ZOrder.value一定会重复，然后没法启动。现在改好了